crates/tests/databases-tests/src/yugabyte/snapshots/databases_tests__yugabyte__query_tests__basic__select_5.snap
---
source: crates/tests/databases-tests/src/yugabyte/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Let There Be Rock"
      },
      {
        "Title": "Big Ones"
      },
      {
        "Title": "Jagged Little Pill"
      },
      {
        "Title": "Facelift"
      },
      {
        "Title": "Warner 25 Anos"
      }
    ]
  }
]
