crates/tests/databases-tests/src/yugabyte/snapshots/databases_tests__yugabyte__query_tests__basic__select_array_variable.snap
---
source: crates/tests/databases-tests/src/yugabyte/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": 2
      }
    ]
  },
  {
    "rows": [
      {
        "result": 3
      }
    ]
  }
]
